chore: Update AuthTokenFilter constructor injection in WebSecurityConfig